Fix errorprone